add responsive and mobile navigation on team page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </button>
                 </div>
                 <ul class="mobile-nav">
-                    <li><a href="#" class="mobile-nav__item">Главная</a></li>
+                    <li><a href="./index.html" class="mobile-nav__item">Главная</a></li>
                     <li><a href="./team.html" class="mobile-nav__item">Команда</a></li>
                     <li><a href="#" class="mobile-nav__item">Услуги</a></li>
                     <li><a href="#" class="mobile-nav__item">Карьера</a></li>
@@ -114,7 +114,7 @@
                         </div>
                         <nav>
                             <ul class="header-nav">
-                                <li><a href="#" class="nav-item">Главная</a></li>
+                                <li><a href="./index.html" class="nav-item">Главная</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
                                 <li><a href="./team.html" class="nav-item">Команда</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
@@ -672,10 +672,10 @@
                     <div class="footer-block__nav">
                         <ul class="footer-nav">
                             <li>
-                                <a href="#" class="footer-nav__item">Главная</a>
+                                <a href="./index.html" class="footer-nav__item">Главная</a>
                             </li>
                             <li>
-                                <a href="#" class="footer-nav__item">Команда</a>
+                                <a href="./team.html" class="footer-nav__item">Команда</a>
                             </li>
                             <li>
                                 <a href="#" class="footer-nav__item">Услуги</a>
