add accessibility on team page

--- a/team.html
+++ b/team.html
@@ -162,7 +162,7 @@
                                 <div class="teams-card">
                                     <div class="teams-card__img">
                                         <a class="teams-card__link" href="#">
-                                            <img src="./img/shpakov-img.jpg" width="330" height="330">
+                                            <img src="./img/shpakov-img.jpg" width="330" height="330" alt="Nikolay Shpakov - executive director">
                                         </a>
                                     </div>
                                     <div class="teams-card__name">Николай шпаков</div>
@@ -171,7 +171,7 @@
                                 <div class="teams-card">
                                     <div class="teams-card__img">
                                         <a class="teams-card__link" href="#">
-                                            <img src="./img/naumenko-img.jpg" width="330" height="330">
+                                            <img src="./img/naumenko-img.jpg" width="330" height="330" alt="Oleg Naumenko - service station">
                                         </a>
                                     </div>
                                     <div class="teams-card__name">Олег Науменко</div>
@@ -184,7 +184,7 @@
                                 <div class="teams-card">
                                     <div class="teams-card__img">
                                         <a class="teams-card__link" href="#">
-                                            <img src="./img/ershov-img.jpg" width="330" height="330">
+                                            <img src="./img/ershov-img.jpg" width="330" height="330" alt="Dmitry Ershov - head of the IOS group">
                                         </a>
                                     </div>
                                     <div class="teams-card__name">Дмитрий Ершов</div>
@@ -193,7 +193,7 @@
                                 <div class="teams-card">
                                     <div class="teams-card__img">
                                         <a class="teams-card__link" href="#">
-                                            <img src="./img/phomin-img.jpg" width="330" height="330">
+                                            <img src="./img/phomin-img.jpg" width="330" height="330" alt="Yaroslav Fomin - talent recruitment specialist">
                                         </a>
                                     </div>
                                     <div class="teams-card__name">Ярослав фомин</div>
@@ -202,7 +202,7 @@
                                 <div class="teams-card">
                                     <div class="teams-card__img">
                                         <a class="teams-card__link" href="#">
-                                            <img src="./img/gorynova-img.jpg" width="330" height="330">
+                                            <img src="./img/gorynova-img.jpg" width="330" height="330" alt="Elena Goryunova - head of design group">
                                         </a>
                                     </div>
                                     <div class="teams-card__name">Елена горюнова</div>
@@ -211,7 +211,7 @@
                                 <div class="teams-card">
                                     <div class="teams-card__img">
                                         <a class="teams-card__link" href="#">
-                                            <img src="./img/phomin-two-img.jpg" width="330" height="330">
+                                            <img src="./img/phomin-two-img.jpg" width="330" height="330" alt="Yaroslav Fomin - quality control team leader">
                                         </a>
                                     </div>
                                     <div class="teams-card__name">Ярослав фомин</div>
@@ -224,7 +224,7 @@
                                 <div class="teams-card">
                                     <div class="teams-card__img">
                                         <a class="teams-card__link" href="#">
-                                            <img src="./img/shpakov-two-img.jpg" width="330" height="330">
+                                            <img src="./img/shpakov-two-img.jpg" width="330" height="330" alt="Nikolay Shpakov - business manager">
                                         </a>
                                     </div>
                                     <div class="teams-card__name">Николай шпаков</div>
@@ -233,7 +233,7 @@
                                 <div class="teams-card">
                                     <div class="teams-card__img">
                                         <a class="teams-card__link" href="#">
-                                            <img src="./img/naumenko-f-img.jpg" width="330" height="330">
+                                            <img src="./img/naumenko-f-img.jpg" width="330" height="330" alt="Olga Naumenko - android team leader">
                                         </a>
                                     </div>
                                     <div class="teams-card__name">Ольга науменко</div>
@@ -254,7 +254,7 @@
                     <div class="position-col">
                         <div class="position-col__name">Открытые позиции</div>
                         <div class="position-col__title">Присоединяйтесь к нам</div>
-                        <button class="position-col__btn">
+                        <button class="position-col__btn" role="button" aria-label="open position - to learn more">
                             <a href="#" class="btn-blue">Узнать больше</a>
                         </button>
                     </div>
