add header and hero block on portfolio page

--- a/team.html
+++ b/team.html
@@ -33,7 +33,7 @@
                     <li><a href="./team.html" class="mobile-nav__item">Команда</a></li>
                     <li><a href="#" class="mobile-nav__item">Услуги</a></li>
                     <li><a href="#" class="mobile-nav__item">Карьера</a></li>
-                    <li><a href="#" class="mobile-nav__item">Портфолио</a></li>
+                    <li><a href="./portfolio-page.html" class="mobile-nav__item">Портфолио</a></li>
                     <li><a href="#" class="mobile-nav__item">Контакты</a></li>
                 </ul>
                 <div class="menu-social-one">
@@ -122,7 +122,7 @@
                                 <img src="./img/header-line.svg" width="2" height="16">
                                 <li><a href="#" class="nav-item">Карьера</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
-                                <li><a href="#" class="nav-item">Портфолио</a></li>
+                                <li><a href="./portfolio-page.html" class="nav-item">Портфолио</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
                                 <li><a href="#" class="nav-item">Контакты</a></li>
                             </ul>
@@ -303,7 +303,7 @@
                                 <a href="#" class="footer-nav__item">Карьера</a>
                             </li>
                             <li>
-                                <a href="#" class="footer-nav__item">Портфолио</a>
+                                <a href="./portfolio-page.html" class="footer-nav__item">Портфолио</a>
                             </li>
                             <li>
                                 <a href="#" class="footer-nav__item">Контакты</a>
