add portfolio block on portfolio page

--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -64,6 +64,99 @@
                 </div>
             </div>
         </div>
+        <main class="main">
+            <section class="portfolio-portfolio">
+                <div class="container">
+                    <div class="portfolio-portfolio-row">
+                        <div class="portfolio-gallary">
+                            <div class="portfolio-item">
+                                <div class="portfolio-item__img">
+                                    <a href="#">
+                                        <img src="./img/portfolio-page-prorab.jpg" width="700" height="800" alt="prorab-x mobile app screen">
+                                    </a>
+                                </div>
+                                <div class="portfolio-item__link">
+                                    <a href="#" class="portfolio__link">Прораб-x</a>
+                                </div>
+                                <div class="portfolio-item__text">Мобильное приложение для строителей</div>
+                            </div>
+                            <div class="portfolio-item">
+                                <div class="portfolio-item__img">
+                                    <a href="#">
+                                        <img src="./img/portfolio-page-voice.jpg" width="700" height="800" alt="voice control screens">
+                                    </a>
+                                </div>
+                                <div class="portfolio-item__link">
+                                    <a href="#" class="portfolio__link">Голосовой помошник</a>
+                                </div>
+                                <div class="portfolio-item__text">Сервис для работы со списками задач</div>
+                            </div>
+                        </div>
+                        <div class="portfolio-gallary">
+                            <div class="portfolio-item">
+                                <div class="portfolio-item__img">
+                                    <a href="#">
+                                        <img src="./img/portfolio-page-atol.jpg" width="700" height="800" alt="atol mobile app screen">
+                                    </a>
+                                </div>
+                                <div class="portfolio-item__link">
+                                    <a href="#" class="portfolio__link">ATOL-бонус</a>
+                                </div>
+                                <div class="portfolio-item__text">Мобильное приложение для профессионалов</div>
+                            </div>
+                            <div class="portfolio-item">
+                                <div class="portfolio-item__img">
+                                    <a href="#">
+                                        <img src="./img/portfolio-page-vroom.jpg" width="700" height="800" alt="vroomgames app screen">
+                                    </a>
+                                </div>
+                                <div class="portfolio-item__link">
+                                    <a href="#" class="portfolio__link">Vroomgames</a>
+                                </div>
+                                <div class="portfolio-item__text">Сервис для работы со списками заказов</div>
+                            </div>
+                        </div>
+                        <div class="portfolio-gallary">
+                            <div class="portfolio-item">
+                                <div class="portfolio-item__img">
+                                    <a href="#">
+                                        <img src="./img/portfolio-page-service.jpg" width="700" height="800" alt="mobile phone with mobile control app">
+                                    </a>
+                                </div>
+                                <div class="portfolio-item__link">
+                                    <a href="#" class="portfolio__link">Сервис для работы с клиентами</a>
+                                </div>
+                                <div class="portfolio-item__text">Сервис для работы с клиентами и партнерами</div>
+                            </div>
+                            <div class="portfolio-item">
+                                <div class="portfolio-item__img">
+                                    <a href="#">
+                                        <img src="./img/portfolio-page-vroom.jpg" width="700" height="800" alt="cinzano promo system">
+                                    </a>
+                                </div>
+                                <div class="portfolio-item__link">
+                                    <a href="#" class="portfolio__link">Промо-система Cinzano</a>
+                                </div>
+                                <div class="portfolio-item__text">Сервис для работы со списками заказов</div>
+                            </div>
+                        </div>
+                        <div class="portfolio-gallary">
+                            <div class="portfolio-item">
+                                <div class="portfolio-item__img">
+                                    <a href="#">
+                                        <img src="./img/portfolio-page-actyal.jpg" width="700" height="800" alt="actyal mobile app screen">
+                                    </a>
+                                </div>
+                                <div class="portfolio-item__link">
+                                    <a href="#" class="portfolio__link">Актуаль</a>
+                                </div>
+                                <div class="portfolio-item__text">Сайт промо игры</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 </body>
 </html>
