add clients block on portfolio page

--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -156,6 +156,53 @@
                     </div>
                 </div>
             </section>
+            <section class="clients">
+                <div class="container">
+                    <div class="clients-title">Клиенты</div>
+                    <div class="clients-row">
+                        <div class="clients-item">
+                            <div class="cycle-item__img">
+                                <img src="./img/cinzano-img.svg" width="115" height="56" alt="">
+                            </div>
+                            <div class="cycle-item__img">
+                                <img src="./img/atol-svg.svg" width="137" height="31" alt="">
+                            </div>
+                            <div class="cycle-item__img">
+                                <img src="./img/mondoro-svg.svg" width="157" height="70" alt="">
+                            </div>
+                            <div class="cycle-item__img">
+                                <img src="./img/vroom-svg.svg" width="133" height="68" alt="">
+                            </div>
+                            <div class="cycle-item__img">
+                                <img src="./img/aryal-svg.svg" width="107" height="60" alt="">
+                            </div>
+                            <div class="cycle-item__img">
+                                <img src="./img/cinzano-img.svg" width="115" height="56" alt="">
+                            </div>
+                        </div>
+                        <div class="clients-item">
+                            <div class="cycle-item__img">
+                                <img src="./img/aryal-svg.svg" width="107" height="60" alt="">
+                            </div>
+                            <div class="cycle-item__img">
+                                <img src="./img/cinzano-img.svg" width="115" height="56" alt="">
+                            </div>
+                            <div class="cycle-item__img">
+                                <img src="./img/atol-svg.svg" width="137" height="31" alt="">
+                            </div>
+                            <div class="cycle-item__img">
+                                <img src="./img/mondoro-svg.svg" width="157" height="70" alt="">
+                            </div>
+                            <div class="cycle-item__img">
+                                <img src="./img/cinzano-img.svg" width="115" height="56" alt="">
+                            </div>
+                            <div class="cycle-item__img">
+                                <img src="./img/vroom-svg.svg" width="133" height="68" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 </body>
