add have-idea block on portfolio page

--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -203,6 +203,20 @@
                     </div>
                 </div>
             </section>
+            <section class="have-idea">
+                <div class="container">
+                    <div class="position-col">
+                        <div class="position-col__name">Есть идея?</div>
+                        <div class="position-col__title">Свяжитесь с нами</div>
+                        <div class="position-col__text">У вас есть уже существующий проект, который<br> вы хотите усовершенствовать? Вы хотите
+                            воплотить в<br> жизнь смелую идею, но вам нужна помощь? Или вы<br> вообще не знаете, с чего начать реализацию проекта?
+                        </div>
+                        <button class="position-col__btn" role="button" aria-label="have idea - contact">
+                            <a href="#" class="btn-blue">Узнать больше</a>
+                        </button>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 </body>
