--- a/team.html
+++ b/team.html
@@ -147,7 +147,7 @@
             </div>
         </div>
         <main class="main">
-            <section class="teams">
+            <section class="teams" id="teams">
                 <div class="container">
                     <div class="teams-row">
                         <div class="teams-row__one">
@@ -244,7 +244,7 @@
                     </div>
                     <div class="teams-buttons">
                         <button class="teams-btn" role="button" aria-label="all teams">
-                        <a href="#" class="teams-btn-all">Вся команда</a>
+                        <a href="#teams" class="teams-btn-all">Вся команда</a>
                     </button>
                     </div>
                 </div>
