--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="#" class="mobile-nav__item">Услуги</a></li>
                     <li><a href="#" class="mobile-nav__item">Карьера</a></li>
                     <li><a href="./portfolio-page.html" class="mobile-nav__item">Портфолио</a></li>
-                    <li><a href="#" class="mobile-nav__item">Контакты</a></li>
+                    <li><a href="./contacts.html" class="mobile-nav__item">Контакты</a></li>
                 </ul>
                 <div class="menu-social-one">
                     <div class="menu-social__img">
@@ -124,7 +124,7 @@
                                 <img src="./img/header-line.svg" width="2" height="16">
                                 <li><a href="./portfolio-page.html" class="nav-item">Портфолио</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
-                                <li><a href="#" class="nav-item">Контакты</a></li>
+                                <li><a href="./contacts.html" class="nav-item">Контакты</a></li>
                             </ul>
                             <div class="header-controls">
                                 <img src="./img/RU.svg" width="28" height="20" id="lang">
@@ -689,7 +689,7 @@
                                 <a href="./portfolio-page.html" class="footer-nav__item">Портфолио</a>
                             </li>
                             <li>
-                                <a href="#" class="footer-nav__item">Контакты</a>
+                                <a href="./contacts.html" class="footer-nav__item">Контакты</a>
                             </li>
                         </ul>
                         <ul class="footer-nav">
