add active page menu item highlighting

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./js/script.js"></script>
     <title>UST</title>
 </head>
-<body>
+<body class="body-main-page">
     <div class="wrapper">
         <div class="mobile-menu">
             <div class="mobile-menu-row">
