fix display the experience block in the mobile version on the main page

--- a/index.html
+++ b/index.html
@@ -171,6 +171,28 @@
             </div>
         </div>
         <main class="main">
+            <section class="experience">
+                <div class="container">
+                    <div class="hero__experience">
+                        <div class="experience-items">
+                            <div class="experience-items__years">4+</div>
+                            <div class="experience-items__text">Года опыта</div>
+                        </div>
+                        <div class="experience-items">
+                            <div class="experience-items__years">30+</div>
+                            <div class="experience-items__text">Завершенных проектов</div>
+                        </div>
+                        <div class="experience-items">
+                            <div class="experience-items__years">300+</div>
+                            <div class="experience-items__text">Профессионалов</div>
+                        </div>
+                        <div class="experience-items">
+                            <div class="experience-items__years">3+</div>
+                            <div class="experience-items__text">Года на рынке</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="about">
                 <div class="container">
                     <div class="section-title">О нас</div>
