add header and hero block on career page

--- a/contacts.html
+++ b/contacts.html
@@ -33,7 +33,7 @@
                     <li><a href="./index.html" class="mobile-nav__item">Главная</a></li>
                     <li><a href="./team.html" class="mobile-nav__item">Команда</a></li>
                     <li><a href="#" class="mobile-nav__item">Услуги</a></li>
-                    <li><a href="#" class="mobile-nav__item">Карьера</a></li>
+                    <li><a href="./career.html" class="mobile-nav__item">Карьера</a></li>
                     <li><a href="./portfolio-page.html" class="mobile-nav__item">Портфолио</a></li>
                     <li><a href="./contacts.html" class="mobile-nav__item">Контакты</a></li>
                 </ul>
@@ -121,7 +121,7 @@
                                 <img src="./img/header-line.svg" width="2" height="16">
                                 <li><a href="#" class="nav-item">Услуги</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
-                                <li><a href="#" class="nav-item">Карьера</a></li>
+                                <li><a href="./career.html" class="nav-item">Карьера</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
                                 <li><a href="./portfolio-page.html" class="nav-item">Портфолио</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
@@ -345,7 +345,7 @@
                         </ul>
                         <ul class="footer-nav">
                             <li>
-                                <a href="#" class="footer-nav__item">Карьера</a>
+                                <a href="./career.html" class="footer-nav__item">Карьера</a>
                             </li>
                             <li>
                                 <a href="./portfolio-page.html" class="footer-nav__item">Портфолио</a>
