add increase in the number on main page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
     <title>UST</title>
 </head>
@@ -151,20 +153,32 @@
                     </div>
                     <div class="hero__experience">
                         <div class="experience-items">
-                            <div class="experience-items__years">4+</div>
-                            <div class="experience-items__text">Года опыта</div>
+                            <div class="experience-items__years">
+                                <div class="experience__num">12</div>
+                                <div class="experience__sym">+</div>
+                            </div>
+                            <div class="experience-items__text">Лет опыта</div>
                         </div>
                         <div class="experience-items">
-                            <div class="experience-items__years">30+</div>
+                            <div class="experience-items__years">
+                                <div class="experience__num">30</div>
+                                <div class="experience__sym">+</div>
+                            </div>
                             <div class="experience-items__text">Завершенных проектов</div>
                         </div>
                         <div class="experience-items">
-                            <div class="experience-items__years">300+</div>
+                            <div class="experience-items__years">
+                                <div class="experience__num">300 </div>
+                                <div class="experience__sym">+</div>
+                            </div>
                             <div class="experience-items__text">Профессионалов</div>
                         </div>
                         <div class="experience-items">
-                            <div class="experience-items__years">3+</div>
-                            <div class="experience-items__text">Года на рынке</div>
+                            <div class="experience-items__years">
+                                <div class="experience__num">10</div>
+                                <div class="experience__sym">+</div>
+                            </div>
+                            <div class="experience-items__text">Лет на рынке</div>
                         </div>
                     </div>
                 </div>
